[gd_scene load_steps=7 format=3 uid="uid://br0h18fqmirga"]

[ext_resource type="PackedScene" uid="uid://fivay0tb8yky" path="res://nodes/player.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://yg5mhbm6w5rx" path="res://base/main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://deys43et4bw2g" path="res://nodes/boss.tscn" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://dkf506f3owsi7" path="res://sprites/background/732f46d3-d54d-4bd8-8908-1d4c9f4118b4.jpg" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://qsadhjj7ohqy" path="res://nodes/felder.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://5np555wkfose" path="res://nodes/skill_tooltip.tscn" id="6_sybi7"]

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
player_scene = ExtResource("1_0xm2m")

[node name="Felder" parent="." instance=ExtResource("5_lquwl")]
position = Vector2(376, 528)

[node name="Player" parent="." instance=ExtResource("1_0xm2m")]
top_level = true
position = Vector2(216, 320)

[node name="Boss" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(1008, 304)

[node name="TestTimer" type="Timer" parent="."]

[node name="Turn Counter" type="Button" parent="."]
offset_left = 456.0
offset_top = 280.0
offset_right = 744.0
offset_bottom = 360.0
text = "Turn Count"

[node name="GameOver" type="Window" parent="."]
auto_translate_mode = 1
mode = 3
title = "You Died"
initial_position = 2
size = Vector2i(500, 500)
visible = false

[node name="Label" type="RichTextLabel" parent="GameOver"]
offset_right = 498.0
offset_bottom = 358.0
text = "Game Over"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="GameOver"]
offset_left = 146.0
offset_top = 373.0
offset_right = 354.0
offset_bottom = 438.0
text = "CONFIRM"

[node name="Hintergrundbild" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576, 324)
scale = Vector2(1.125, 0.632813)
texture = ExtResource("4_1bvp3")

[node name="SkillTooltip" parent="." instance=ExtResource("6_sybi7")]

[connection signal="press" from="." to="Player" method="_on_main_press"]
[connection signal="press" from="." to="Boss" method="_on_main_press"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="pressed" from="Turn Counter" to="." method="_on_turn_counter_pressed"]
[connection signal="pressed" from="Turn Counter" to="Player" method="_on_button_pressed"]
[connection signal="pressed" from="Turn Counter" to="Boss" method="_on_button_pressed"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameOver/Button" to="Player" method="_on_game_over_button_pressed"]
